--- a/app/src/main/res/layout/activity_athletes.xml
+++ b/app/src/main/res/layout/activity_athletes.xml
@@ -3,16 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context="sportsanalytics.er_lab.com.sportsanalyticsandroidsmartwatch.AthletesActivity">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ListView
+            android:id="@+id/mainListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/lv_transList" android:layout_gravity="top"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:nestedScrollingEnabled="true"
+            android:scrollbars="vertical" />
     </LinearLayout>
+
+
 
 </android.support.v4.widget.NestedScrollView>
