Fixes constraints/layouts for round screen

--- a/app/src/main/res/layout/activity_athletes.xml
+++ b/app/src/main/res/layout/activity_athletes.xml
@@ -8,7 +8,9 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/list_end_padding"
+        android:paddingTop="@dimen/list_start_padding">
 
         <ListView
             android:id="@+id/mainListView"
@@ -16,7 +18,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:nestedScrollingEnabled="true"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"/>
     </LinearLayout>
 
 
