--- a/app/src/main/res/layout/fragment_wellness.xml
+++ b/app/src/main/res/layout/fragment_wellness.xml
@@ -3,94 +3,124 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="sportsanalytics.er_lab.com.sportsanalyticsandroidsmartwatch.WellnessFragment">
-
-    <TextView
-        android:id="@+id/wellnessSurveyTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:text="Wellness Survey" />
-
-    <TextView
-        android:id="@+id/fatigueText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Fatigue" />
-
-    <SeekBar
-        android:id="@+id/fatigueStatus"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:max="5"
-        android:progress="0" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"
+        android:fillViewport="true">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/sorenessText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="Soreness" />
+            <TextView
+                android:id="@+id/wellnessSurveyTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:text="Wellness Survey" />
+
+            <TextView
+                android:id="@+id/fatigueText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:text="Fatigue" />
+
+            <SeekBar
+                android:id="@+id/fatigueStatus"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:max="5"
+                android:progress="0" />
+
+            <TextView
+                android:id="@+id/sorenessText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="Soreness" />
 
 
-    <SeekBar
-        android:id="@+id/sorenessStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:max="5"
-        android:progress="0" />
+            <SeekBar
+                android:id="@+id/sorenessStatus"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:max="5"
+                android:progress="0" />
 
-    <TextView
-        android:id="@+id/moodText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:text="Mood" />
+            <TextView
+                android:id="@+id/moodText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="Mood" />
 
 
-    <SeekBar
-        android:id="@+id/moodStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:max="5"
-        android:progress="0" />
+            <SeekBar
+                android:id="@+id/moodStatus"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:max="5"
+                android:progress="0" />
 
-    <TextView
-        android:id="@+id/stressText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:text="Stress" />
+            <TextView
+                android:id="@+id/stressText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:text="Stress" />
 
-    <SeekBar
-        android:id="@+id/stressStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:max="5"
-        android:progress="0" />
+            <SeekBar
+                android:id="@+id/stressStatus"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:max="5"
+                android:progress="0" />
 
-    <TextView
-        android:id="@+id/sleepText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="230dp"
+            <TextView
+                android:id="@+id/sleepText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:text="Sleep" />
 
-        android:text="Sleep" />
+            <SeekBar
+                android:id="@+id/sleepStatus"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:max="5"
+                android:progress="0" />
+        </LinearLayout>
 
-    <SeekBar
-        android:id="@+id/sleepStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
-        android:max="5"
-        android:progress="0" />
-
+    </ScrollView>
 
 
 
