--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,11 +3,13 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_height="match_parent"
 android:layout_width="match_parent"
-android:padding="10dp">
+android:padding="20dp">
 
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/list_end_padding"
+    android:paddingTop="@dimen/list_start_padding"
     android:padding="1sp"
     app:boxedEdges="all">
 
@@ -36,7 +38,7 @@ android:padding="10dp">
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
-                android:textSize="10sp"
+                android:textSize="8sp"
                 android:maxLines="1"
                 android:singleLine="true" />
 
@@ -49,7 +51,7 @@ android:padding="10dp">
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
-                android:textSize="10sp"
+                android:textSize="8sp"
                 android:maxLines="1"
                 android:singleLine="true" />
 
