--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -12,6 +12,7 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
         />
 
     <TextView
@@ -19,7 +20,7 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="174dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
