--- a/app/src/main/res/layout/fragment_rpe.xml
+++ b/app/src/main/res/layout/fragment_rpe.xml
@@ -4,22 +4,31 @@
     android:layout_height="match_parent"
     tools:context="sportsanalytics.er_lab.com.sportsanalyticsandroidsmartwatch.RPEFragment">
 
-
-    <EditText
-        android:id="@+id/duration"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginStart="40dp"
         android:textSize="10dp"
         android:ems="10"
         android:inputType="number"
-        android:text="Duration (min):" />
+        android:text="Duration (min):"  />
+
+    <EditText
+        android:id="@+id/duration"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="110dp"
+        android:textSize="10dp"
+        android:ems="10"
+        android:inputType="number"
+        />
 
     <SeekBar
         android:id="@+id/scale"
         android:layout_width="match_parent"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="30dp"
         android:layout_height="78dp"
         android:max="10"
         android:progress="5" />
@@ -29,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="70dp"
         android:layout_marginStart="30dp"
         android:text="Practice" />
 
@@ -47,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10dp"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="120dp"
         android:layout_marginStart="30dp"
         android:text="Competition" />
 
