Adds soreness activity

--- a/app/src/main/res/layout/fragment_jump.xml
+++ b/app/src/main/res/layout/fragment_jump.xml
@@ -13,23 +13,25 @@
         android:layout_gravity="center_horizontal"
         android:text="Jump" />
 
-    <ProgressBar
-        android:id="@+id/jumpProgressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-
     <TextView
         android:id="@+id/jumpHeightText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="115dp"
         android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
+
+    <ProgressBar
+        android:id="@+id/jumpProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="132dp"
+        android:layout_marginTop="20dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:progress="0"/>
 </FrameLayout>
