--- a/app/src/main/res/layout/fragment_jump.xml
+++ b/app/src/main/res/layout/fragment_jump.xml
@@ -21,7 +21,7 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="90dp"
         android:orientation="vertical"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -29,9 +29,18 @@
     <ProgressBar
         android:id="@+id/jumpProgressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="132dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="match_parent"
+        android:layout_width="80dp"
+        android:layout_marginTop="0dp"
+        android:layout_height="80dp"
         android:layout_gravity="center"
         android:progress="0"/>
+
+    <Button
+        android:id="@+id/submitJumpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:text="Submit" />
 </FrameLayout>
