--- a/app/src/main/res/layout/fragment_rpe.xml
+++ b/app/src/main/res/layout/fragment_rpe.xml
@@ -61,7 +61,7 @@
         android:text="Competition" />
 
     <Button
-        android:id="@+id/submitButton"
+        android:id="@+id/submitRPEButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="155dp"
