--- a/app/src/main/res/layout/fragment_wellness.xml
+++ b/app/src/main/res/layout/fragment_wellness.xml
@@ -118,7 +118,17 @@
                 android:layout_gravity="center_horizontal"
                 android:max="5"
                 android:progress="0" />
+
+            <Button
+                android:id="@+id/submitWellnessButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:text="Submit" />
         </LinearLayout>
+
 
     </ScrollView>
 
