--- a/app/src/main/res/layout/activity_athletes.xml
+++ b/app/src/main/res/layout/activity_athletes.xml
@@ -8,17 +8,15 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/list_end_padding"
-        android:paddingTop="@dimen/list_start_padding">
+        android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/mainListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="0dp"
             android:nestedScrollingEnabled="true"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical" />
     </LinearLayout>
 
 
