--- a/app/src/main/res/layout/fragment_jump.xml
+++ b/app/src/main/res/layout/fragment_jump.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="sportsanalytics.er_lab.com.sportsanalyticsandroidsmartwatch.JumpFragment">
@@ -8,9 +9,9 @@
         android:id="@+id/jumpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
         android:text="Jump" />
 
     <TextView
@@ -21,26 +22,29 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         android:orientation="vertical"
+        android:textSize="20dp"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
     <ProgressBar
         android:id="@+id/jumpProgressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="80dp"
-        android:layout_marginTop="0dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
-        android:progress="0"/>
+        android:layout_marginTop="0dp"
+        android:progress="0" />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/submitJumpButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:text="Submit" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="80dp"
+        android:width="40dp"
+        android:background="@drawable/roundedbutton"
+        android:src="@drawable/icon_done" />
 </FrameLayout>
