--- a/app/src/main/res/layout/fragment_rpe.xml
+++ b/app/src/main/res/layout/fragment_rpe.xml
@@ -3,71 +3,88 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="sportsanalytics.er_lab.com.sportsanalyticsandroidsmartwatch.RPEFragment">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="40dp"
-        android:textSize="10dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text="Duration (min):"  />
-
-    <EditText
-        android:id="@+id/duration"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="110dp"
-        android:textSize="10dp"
-        android:ems="10"
-        android:inputType="number"
-        />
-
-    <SeekBar
-        android:id="@+id/scale"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_marginTop="30dp"
-        android:layout_height="78dp"
-        android:max="10"
-        android:progress="5" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <CheckBox
-        android:id="@+id/practice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginStart="30dp"
-        android:text="Practice" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_marginTop="50dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:ems="4"
+                    android:inputType="number"
+                    android:text="Minutes:"
+                    android:textSize="20dp" />
+                <EditText
+                    android:id="@+id/duration"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:textSize="20dp"/>
+            </LinearLayout>
 
-    <CheckBox
-        android:id="@+id/training"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10dp"
-        android:layout_marginTop="95dp"
-        android:layout_marginStart="30dp"
-        android:text="Training" />
 
-    <CheckBox
-        android:id="@+id/competition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginStart="30dp"
-        android:text="Competition" />
+            <CheckBox
+                android:id="@+id/practice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="40dp"
+                android:text="Practice" />
 
-    <Button
-        android:id="@+id/submitRPEButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="155dp"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:text="Submit" />
+            <CheckBox
+                android:id="@+id/training"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="40dp"
+                android:text="Training" />
 
+            <CheckBox
+                android:id="@+id/competition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="40dp"
+                android:text="Competition" />
+
+
+
+            <Button
+                android:id="@+id/RPEButton"
+                android:background = "@drawable/roundedbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:text="0" />
+
+
+            <ImageButton
+                android:id="@+id/submitRPEButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:width="40dp"
+                android:background="@drawable/roundedbutton"
+                android:src="@drawable/icon_done" />
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
