--- a/app/src/main/res/layout/fragment_soreness.xml
+++ b/app/src/main/res/layout/fragment_soreness.xml
@@ -9,32 +9,34 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/list_end_padding"
-        android:paddingTop="@dimen/list_start_padding">
+        android:paddingBottom="0dp"
+        android:paddingTop="0dp">
 
         <ListView
             android:id="@+id/musclesListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
             android:nestedScrollingEnabled="true"
             android:scrollbars="vertical"/>
 
         <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            <Button android:id="@+id/submitSorenessButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="65dp"
-                android:layout_marginTop="100dp"
-                android:text="Submit"
-                android:orientation="horizontal"
-                android:layout_gravity="center_horizontal">
-            </Button>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/submitSorenessButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="80dp"
+                android:layout_marginLeft="150dp"
+                android:width="40dp"
+                android:background="@drawable/roundedbutton"
+                android:src="@drawable/icon_done" />
         </RelativeLayout>
     </RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
