--- a/app/src/main/res/layout/fragment_wellness.xml
+++ b/app/src/main/res/layout/fragment_wellness.xml
@@ -6,7 +6,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="60dp"
         android:fillViewport="true">
         <LinearLayout
             android:orientation="vertical"
@@ -17,29 +16,32 @@
                 android:id="@+id/wellnessSurveyTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="25dp"
                 android:orientation="vertical"
                 android:layout_gravity="center_horizontal"
+                android:textSize="20dp"
                 android:text="Wellness Survey" />
 
             <TextView
                 android:id="@+id/fatigueText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:orientation="vertical"
                 android:layout_gravity="center_horizontal"
+                android:textSize="20dp"
                 android:text="Fatigue" />
 
-            <SeekBar
+            <Button
                 android:id="@+id/fatigueStatus"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:background = "@drawable/roundedbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:max="5"
-                android:progress="0" />
+                android:text="0" />
+
 
             <TextView
                 android:id="@+id/sorenessText"
@@ -48,18 +50,19 @@
                 android:orientation="vertical"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
+                android:textSize="20dp"
                 android:text="Soreness" />
 
 
-            <SeekBar
+            <Button
                 android:id="@+id/sorenessStatus"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:background = "@drawable/roundedbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:max="5"
-                android:progress="0" />
+                android:text="0" />
 
             <TextView
                 android:id="@+id/moodText"
@@ -71,15 +74,16 @@
                 android:text="Mood" />
 
 
-            <SeekBar
+
+            <Button
                 android:id="@+id/moodStatus"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:background = "@drawable/roundedbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:max="5"
-                android:progress="0" />
+                android:text="0" />
 
             <TextView
                 android:id="@+id/stressText"
@@ -90,15 +94,15 @@
                 android:layout_gravity="center_horizontal"
                 android:text="Stress" />
 
-            <SeekBar
+            <Button
                 android:id="@+id/stressStatus"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:background = "@drawable/roundedbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:max="5"
-                android:progress="0" />
+                android:text="0" />
 
             <TextView
                 android:id="@+id/sleepText"
@@ -109,24 +113,26 @@
                 android:layout_gravity="center_horizontal"
                 android:text="Sleep" />
 
-            <SeekBar
-                android:id="@+id/sleepStatus"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:max="5"
-                android:progress="0" />
-
             <Button
-                android:id="@+id/submitWellnessButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/sleepStatus"
+                android:background = "@drawable/roundedbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:text="Submit" />
+                android:text="0" />
+
+
+            <ImageButton
+                android:id="@+id/submitWellnessButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:width="40dp"
+                android:background="@drawable/roundedbutton"
+                android:src="@drawable/icon_done" />
         </LinearLayout>
 
 
